deploy/kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stateless-wordpress
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingresses
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingresses
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingresses
  name: stateless-wordpress
spec:
  selector:
    app: stateless-wordpress
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingresses
  name: stateless-wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stateless-wordpress
  template:
    metadata:
      labels:
        app: stateless-wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpresscontainerregistry.azurecr.io/stateless-wordpress:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        readinessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 9000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /var/www/html
      - name: nginx
        image: wordpresscontainerregistry.azurecr.io/stateless-nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /var/www/html
      volumes:
      - name: data
        emptyDir: {}
      #imagePullSecrets:
      #- name: azurecr2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: ingresses
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "ingress-nginx"  
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-issuer"
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: app.anaghimbensouissi.ovh
  #- host: app2.anaghimbensouissi.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stateless-wordpress
            port:
              number: 80
  tls:
  - hosts:
    #- app2.anaghimbensouissi.ovh
    - app.anaghimbensouissi.ovh
    secretName: letsencrypt-prod-key
